Mise à jour du courriel de contact

--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,6 @@ BookShowToC = false
 BookGitURL = 'https://github.com/LGD-Fr/famille-chauviteau.fr'
 
 ContactEMailFile = "/img/courriel.png"
-ContactEMailAlt = "« contact » AROBASE « famille » TRAIT D’UNION « chauviteau » POINT « site »"
+ContactEMailAlt = "« contact » AROBASE « famille » TRAIT D’UNION « chauviteau » POINT « fr »"
 RedirectToCanonical = false
 CanonicalBaseURL = "https://famille-chauviteau.fr"
