--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ RedirectToCanonical = false
 CanonicalBaseURL = "https://famille-chauviteau.fr"
 
 [markup]
-  defaultMarkdownHandler = "blackfriday"
+  defaultMarkdownHandler = "goldmark"
   [markup.goldmark]
       [markup.goldmark.renderer]
         unsafe = true
